Abandoned %source% expansion

--- a/etc/sample.fediblockhole.conf.toml
+++ b/etc/sample.fediblockhole.conf.toml
@@ -87,7 +87,6 @@ export_fields = ['public_comment']
 ## Set a default comment for exports
 ## 'pre' and 'post' prepend and postpend the comment to the existing comment, if any
 ## 'replace' replaces the existing comment
-## '%source%' and '%date%' in the comment text will be expanded to the import source and
-## last updated date.
+## '%date%' in the comment text will be expanded to the last updated date.
 
-comment = ['Pulled from %source% on %date%', 'pre']
+comment = ['Last updated at %date%', 'pre']
